[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/entities/player/vr_right_hand/vr_right_hand.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/entities/player/vr_left_hand/vr_left_hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/entities/player/player.gd" type="Script" id=3]
[ext_resource path="res://scenes/entities/player/kinematic_body/xr_origin/xr_origin.gd" type="Script" id=4]
[ext_resource path="res://scenes/entities/player/movement/movement.gd" type="Script" id=5]
[ext_resource path="res://addons/godot-openxr/config/OpenXRConfig.gdns" type="Script" id=6]
[ext_resource path="res://scenes/entities/player/movement/jump/jump_player_controller/jump_player_controller.gd" type="Script" id=7]
[ext_resource path="res://scenes/entities/player/movement/jump/jump.gd" type="Script" id=8]
[ext_resource path="res://scenes/entities/player/movement/jump/jump_player_physical/jump_player_physical.gd" type="Script" id=9]
[ext_resource path="res://scenes/entities/player/movement/jump/jump_boost_player/jump_boost_player.gd" type="Script" id=10]
[ext_resource path="res://scenes/entities/player/ui/score/score.gd" type="Script" id=12]
[ext_resource path="res://scenes/entities/player/movement/velocity/velocity.gd" type="Script" id=13]
[ext_resource path="res://scenes/entities/player/movement/gravity/gravity.gd" type="Script" id=14]
[ext_resource path="res://scenes/entities/player/health/health.gd" type="Script" id=15]
[ext_resource path="res://scenes/entities/player/ui/ui.gd" type="Script" id=16]
[ext_resource path="res://scenes/entities/player/ui/health_bar/health_bar.gd" type="Script" id=17]
[ext_resource path="res://scenes/entities/player/kinematic_body/kinematic_body.gd" type="Script" id=18]

[sub_resource type="CapsuleShape" id=3]
radius = 0.25
height = 1.4

[node name="Player" type="Spatial"]
process_priority = 1
script = ExtResource( 3 )

[node name="UI" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4705, -3.80429 )
script = ExtResource( 16 )

[node name="HealthBar" type="Label3D" parent="UI"]
transform = Transform( 1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, 0.5, 0 )
pixel_size = 0.02
text = "Health: 0"
script = ExtResource( 17 )

[node name="Score" type="Label3D" parent="UI"]
transform = Transform( 1, 0, 0, 0, 0.939693, -0.34202, 0, 0.34202, 0.939693, 0, -0.709683, 0.698411 )
pixel_size = 0.02
text = "Score: "
script = ExtResource( 12 )

[node name="Health" type="Spatial" parent="."]
script = ExtResource( 15 )

[node name="Movement" type="Spatial" parent="."]
script = ExtResource( 5 )

[node name="Jump" type="Spatial" parent="Movement"]
script = ExtResource( 8 )
jump_boost = 400.0
jump_force = 600.0

[node name="JumpPlayerController" type="Spatial" parent="Movement/Jump"]
script = ExtResource( 7 )
jump_boost = 250.0
jump_force = 300.0

[node name="JumpPlayerPhysical" type="Spatial" parent="Movement/Jump"]
script = ExtResource( 9 )
jump_boost = 2.0

[node name="JumpBoostPlayer" type="Spatial" parent="Movement/Jump"]
script = ExtResource( 10 )

[node name="JumpBoostCoolDown" type="Timer" parent="Movement/Jump/JumpBoostPlayer"]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="Velocity" type="Spatial" parent="Movement"]
script = ExtResource( 13 )

[node name="Gravity" type="Spatial" parent="Movement"]
script = ExtResource( 14 )
gravity_strenght = 700.0

[node name="KinematicBody" type="KinematicBody" parent="."]
physics_interpolation_mode = 2
collision_mask = 16
script = ExtResource( 18 )

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0, 0.939251, 0 )
shape = SubResource( 3 )

[node name="BodyCollisionArea" type="Area" parent="KinematicBody"]
collision_layer = 2
collision_mask = 1024

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody/BodyCollisionArea"]
transform = Transform( -4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0, 1, 0 )
shape = SubResource( 3 )

[node name="XROrigin" type="ARVROrigin" parent="KinematicBody"]
script = ExtResource( 4 )

[node name="Configuration" type="Node" parent="KinematicBody/XROrigin"]
script = ExtResource( 6 )
color_space = 0
refresh_rate = 0.0

[node name="XRCamera" type="ARVRCamera" parent="KinematicBody/XROrigin"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9509, 0 )
doppler_tracking = 2
near = 0.1
far = 1000.0

[node name="XRLeftHand" parent="KinematicBody/XROrigin" instance=ExtResource( 2 )]

[node name="XRRightHand" parent="KinematicBody/XROrigin" instance=ExtResource( 1 )]
controller_id = 2

[connection signal="area_shape_entered" from="KinematicBody/BodyCollisionArea" to="Health" method="_on_BodyCollisionArea_area_shape_entered"]
